# eigen_learn

./: CMakeLists.txt  readme.md
src/: QuatRotate.cpp  code10-2  code10-2.cpp  code10-3.cpp  code10-4.cpp  euler2q.cpp  pcl_quat.cpp  quaternion.cpp  test_eigen.cpp  transform1.cpp
